[gd_scene load_steps=3 format=3 uid="uid://dflsxker1ppx5"]

[ext_resource type="Script" uid="uid://3s3fssnkts4e" path="res://scenes/stage_select.gd" id="1_tne6o"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_38erg"]
bg_color = Color(0.20871, 0.20871, 0.20871, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Stage Select" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tne6o")

[node name="M-1" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -506.0
offset_top = -214.0
offset_right = -436.0
offset_bottom = -144.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_38erg")
text = "M-1"

[node name="M-2" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -366.0
offset_top = -214.0
offset_right = -296.0
offset_bottom = -144.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_38erg")
text = "M-2"

[node name="M-3" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -226.0
offset_top = -214.0
offset_right = -156.0
offset_bottom = -144.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_38erg")
text = "M-3"

[node name="A-1" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -506.0
offset_top = -114.0
offset_right = -436.0
offset_bottom = -44.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_38erg")
text = "A-1"

[node name="A-2" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -366.0
offset_top = -114.0
offset_right = -296.0
offset_bottom = -44.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_38erg")
text = "A-2"

[node name="A-3" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -226.0
offset_top = -114.0
offset_right = -156.0
offset_bottom = -44.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_38erg")
text = "A-3"

[node name="F-1" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -506.0
offset_top = -14.0
offset_right = -436.0
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_38erg")
text = "F-1"

[node name="F-2" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -366.0
offset_top = -14.0
offset_right = -296.0
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_38erg")
text = "F-2"

[node name="F-3" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -226.0
offset_top = -14.0
offset_right = -156.0
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_38erg")
text = "F-3"

[node name="R-1" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -506.0
offset_top = 86.0
offset_right = -436.0
offset_bottom = 156.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_38erg")
text = "R-1"

[node name="R-2" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -366.0
offset_top = 86.0
offset_right = -296.0
offset_bottom = 156.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_38erg")
text = "R-2"

[node name="R-3" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -226.0
offset_top = 86.0
offset_right = -156.0
offset_bottom = 156.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_38erg")
text = "R-3"

[node name="C-1" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -506.0
offset_top = 186.0
offset_right = -436.0
offset_bottom = 256.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_38erg")
text = "C-1"

[node name="C-2" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -366.0
offset_top = 186.0
offset_right = -296.0
offset_bottom = 256.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_38erg")
text = "C-2"

[node name="C-3" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -226.0
offset_top = 186.0
offset_right = -156.0
offset_bottom = 256.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_38erg")
text = "C-3"

[node name="Label" type="Label" parent="."]
layout_mode = 1
offset_left = 85.0
offset_top = 37.0
offset_right = 200.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 25
text = "Menu de Fases"

[node name="TittleScreenButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 289.0
offset_top = 216.0
offset_right = 521.0
offset_bottom = 267.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_38erg")
text = "Voltar para o Menu Inicial"

[connection signal="pressed" from="M-1" to="." method="_on_m_1_pressed"]
[connection signal="pressed" from="A-1" to="." method="_on_a_1_pressed"]
[connection signal="pressed" from="TittleScreenButton" to="." method="_on_tittle_screen_button_pressed"]
